--- a/Resources/layout/card_item.xml
+++ b/Resources/layout/card_item.xml
@@ -10,41 +10,71 @@
     
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        
         cardview:cardElevation="16dp"
         cardview:cardCornerRadius="5dp"
         android:elevation="@dimen/abc_action_bar_content_inset_material"
         android:layout_height="wrap_content">
+
+
          <LinearLayout
-            android:id="@+id/clickItem"
+             android:id="@+id/clickItem"
              android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:padding="8dp"
-            
+             android:orientation="vertical"
+             android:padding="8dp"
+            android:background="@color/material_grey_50"
              android:layout_height="wrap_content">
+
+
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="240dp"
+                android:layout_height="200dp"
                 android:paddingTop="15dp"
                 android:scaleType="centerCrop"
                 android:id="@+id/totemImage"/>
-        <!--Imageview-->
-         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#333333"
-            android:text="Shoko Mukanya."
-            android:textStyle="bold"
-            android:textAppearance= "?android:attr/textAppearanceLarge"
-            android:id="@+id/totem_id"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="Short description." 
-            android:textColor="#333333"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+             <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#333333"
+                android:text="Shoko Mukanya."
+                android:textStyle="bold"
+                android:fontFamily="@font/open_sans"
+                android:textAppearance= "?android:attr/textAppearanceLarge"
+                android:id="@+id/totem_id"/>
+
            
-            android:id="@+id/totem_description"/>
+                <TextView
+                android:layout_width="match_parent"
+                
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/fastscroll_default_thickness"
+                tools:text="Short description." 
+                android:fontFamily="@font/open_sans"
+                android:textColor="#333333"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/totem_description"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <android.support.v7.widget.CardView
+                android:padding="@dimen/fastscroll_default_thickness"
+                    android:background="@color/accent_material_dark"
+                    android:layout_alignParentRight="true"
+                    cardview:cardElevation="16dp"
+                    cardview:cardCornerRadius="15dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <TextView
+                android:background="@color/accent_material_dark"
+                android:layout_width="wrap_content"
+                android:padding="@dimen/fastscroll_default_thickness"
+                android:layout_height="wrap_content"
+                android:text="View More"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:id="@+id/totem_btn_view_more"/>
+                </android.support.v7.widget.CardView>
+            </RelativeLayout>
+            
+
         </LinearLayout>
         
     </android.support.v7.widget.CardView>
